--- a/css/style.css
+++ b/css/style.css
@@ -755,7 +755,7 @@ ul.list li:before {
   border: 1px solid #e6e8e0;
   border-radius: 20px;
 }
-.wrapper main .inner .advantage-block-item:nth-child(-n+3) {
+.wrapper main .inner .advantage-block-item:nth-child(-n + 3) {
   margin-top: 0;
 }
 .wrapper main .inner .advantage-block-item.nopr {
@@ -1426,6 +1426,7 @@ ul.list li:before {
   font: 700 36px/1.3 'Gilroy', sans-serif;
 }
 .wrapper main .inner .services-block {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1435,6 +1436,11 @@ ul.list li:before {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-top: 30px;
+}
+.wrapper main .inner .services-block:after {
+  content: '';
+  -ms-flex-preferred-size: calc((100% - 50px)/3);
+      flex-basis: calc((100% - 50px)/3);
 }
 .wrapper main .inner .services-block-item {
   position: relative;
@@ -1455,7 +1461,7 @@ ul.list li:before {
   border-radius: 20px;
   overflow: hidden;
 }
-.wrapper main .inner .services-block-item:nth-child(-n +3) {
+.wrapper main .inner .services-block-item:nth-child(-n + 3) {
   margin-top: 0;
 }
 .wrapper main .inner .services-block-item-badge {
@@ -3284,7 +3290,7 @@ ul.list li:before {
   min-height: 150px;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
-  background: #FFFFFF;
+  background: #ffffff;
   -webkit-box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.05);
   border-radius: 20px;
@@ -6339,22 +6345,58 @@ ul.list li:before {
   min-height: 320px;
 }
 .wrapper main .small-business-page .inner .top-banner:before {
-  top: unset;
-  bottom: -15px;
-  width: 30px;
-  height: 30px;
+  content: none;
 }
 .wrapper main .small-business-page .inner .top-banner:after {
-  right: 110px;
-  top: -22px;
+  right: 26%;
+  top: unset;
+  bottom: 50px;
   width: 55px;
   height: 55px;
+}
+.wrapper main .small-business-page .inner .top-banner-wave {
+  position: absolute;
+  right: 26%;
+  top: unset;
+  bottom: 60px;
+  width: 108px;
+  height: 57px;
+  margin-right: 45px;
+  overflow: hidden;
+}
+.wrapper main .small-business-page .inner .top-banner-wave:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 200%;
+  height: 25px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url(../img/icon_wave.svg);
+  -webkit-animation: wave 5s linear infinite;
+          animation: wave 5s linear infinite;
+}
+.wrapper main .small-business-page .inner .top-banner-wave:after {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 57px;
+  height: 57px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: linear-gradient(285.35deg, #fd9b5c 6.22%, #eb5760 69.31%);
+  border-radius: 50%;
 }
 .wrapper main .small-business-page .inner .top-banner-image {
   -ms-flex-item-align: end;
       align-self: flex-end;
-  width: 99px;
-  margin-top: -20px;
+  width: 140px;
+  margin-top: -25px;
+}
+.wrapper main .small-business-page .inner .advantage-title,
+.wrapper main .small-business-page .inner .steps-title {
+  font: 500 30px/1.3 'Gilroy', sans-serif;
 }
 .wrapper main .freelancer-page .inner .top-banner {
   min-height: 320px;
@@ -6515,7 +6557,7 @@ ul.list li:before {
   border-radius: 20px;
   overflow: hidden;
 }
-.wrapper main .all-tools-page .inner .switcher-block-content-box-item:nth-child(-n+3) {
+.wrapper main .all-tools-page .inner .switcher-block-content-box-item:nth-child(-n + 3) {
   margin-top: 0;
 }
 .wrapper main .all-tools-page .inner .switcher-block-content-box-item-text {
@@ -7020,7 +7062,7 @@ ul.list li:before {
   padding-left: 30px;
 }
 .wrapper .popup_wrapper .inner .popup-block-form-list li:before {
-  content: counter(list) ". ";
+  content: counter(list) '. ';
   counter-increment: list;
   position: absolute;
   left: 0;
