--- a/css/style.less
+++ b/css/style.less
@@ -722,7 +722,7 @@ ul.list {
             padding: 0 25px;
             border: 1px solid #e6e8e0;
             border-radius: 20px;
-            &:nth-child(-n+3) {
+            &:nth-child(-n + 3) {
               margin-top: 0;
             }
             &.nopr {
@@ -1354,10 +1354,15 @@ ul.list {
           font: 700 36px/1.3 @font;
         }
         &-block {
+          position: relative;
           display: flex;
           justify-content: space-between;
           flex-wrap: wrap;
           margin-top: 30px;
+          &:after {
+            content: '';
+            flex-basis: ~'calc((100% - 50px)/3)';
+          }
           &-item {
             position: relative;
             display: flex;
@@ -1370,7 +1375,7 @@ ul.list {
             background: @gray;
             border-radius: 20px;
             overflow: hidden;
-            &:nth-child(-n +3) {
+            &:nth-child(-n + 3) {
               margin-top: 0;
             }
             &-badge {
@@ -3022,7 +3027,7 @@ ul.list {
             width: 250px;
             min-height: 150px;
             box-sizing: content-box;
-            background: #FFFFFF;
+            background: #ffffff;
             box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.05);
             border-radius: 20px;
             img {
@@ -4538,7 +4543,7 @@ ul.list {
                         }
                         span {
                           position: absolute;
-                          left: ~"calc(100% + 7px)";
+                          left: ~'calc(100% + 7px)';
                           top: -12px;
                           display: block;
                           padding: 15px 20px;
@@ -5802,7 +5807,7 @@ ul.list {
                     }
                     span {
                       position: absolute;
-                      left: ~"calc(100% + 7px)";
+                      left: ~'calc(100% + 7px)';
                       top: -12px;
                       display: block;
                       width: 560px;
@@ -5947,21 +5952,56 @@ ul.list {
         .top-banner {
           min-height: 320px;
           &:before {
-            top: unset;
-            bottom: -15px;
-            width: 30px;
-            height: 30px;
+            content: none;
           }
           &:after {
-            right: 110px;
-            top: -22px;
+            right: 26%;
+            top: unset;
+            bottom: 50px;
             width: 55px;
             height: 55px;
           }
+          &-wave {
+            position: absolute;
+            right: 26%;
+            top: unset;
+            bottom: 60px;
+            width: 108px;
+            height: 57px;
+            margin-right: 45px;
+            overflow: hidden;
+            &:before {
+              content: '';
+              position: absolute;
+              left: 0;
+              top: 50%;
+              width: 200%;
+              height: 25px;
+              transform: translateY(-50%);
+              background: url(../img/icon_wave.svg);
+              animation: wave 5s linear infinite;
+            }
+            &:after {
+              position: absolute;
+              right: 0;
+              top: 50%;
+              width: 57px;
+              height: 57px;
+              transform: translateY(-50%);
+              background: linear-gradient(285.35deg, #fd9b5c 6.22%, #eb5760 69.31%);
+              border-radius: 50%;
+            }
+          }
           &-image {
             align-self: flex-end;
-            width: 99px;
-            margin-top: -20px;
+            width: 140px;
+            margin-top: -25px;
+          }
+        }
+        .advantage,
+        .steps {
+          &-title {
+            font: 500 30px/1.3 @font;
           }
         }
       }
@@ -6109,7 +6149,7 @@ ul.list {
                   background: @gray;
                   border-radius: 20px;
                   overflow: hidden;
-                  &:nth-child(-n+3) {
+                  &:nth-child(-n + 3) {
                     margin-top: 0;
                   }
                   &-text {
@@ -6565,7 +6605,7 @@ ul.list {
                 margin-top: 10px;
                 padding-left: 30px;
                 &:before {
-                  content: counter(list) ". ";
+                  content: counter(list) '. ';
                   counter-increment: list;
                   position: absolute;
                   left: 0;
