--- a/css/style.css
+++ b/css/style.css
@@ -5416,8 +5416,33 @@ ul.list li:before {
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-.wrapper main .acquiring-detail-page .inner .top-banner-content-text-open {
-  margin-top: 50px;
+.wrapper main .acquiring-detail-page .inner .top-banner:before {
+  content: none;
+}
+.wrapper main .acquiring-detail-page .inner .top-banner:after {
+  right: 27%;
+  top: 30px;
+  width: 57px;
+  height: 57px;
+}
+.wrapper main .acquiring-detail-page .inner .top-banner-wave {
+  position: absolute;
+  right: 30%;
+  top: 50px;
+  width: 108px;
+  height: 13px;
+  overflow: hidden;
+}
+.wrapper main .acquiring-detail-page .inner .top-banner-wave:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 200%;
+  height: 100%;
+  background: url(../img/icon_wave.svg) no-repeat;
+  -webkit-animation: wave 5s linear infinite;
+          animation: wave 5s linear infinite;
 }
 .wrapper main .acquiring-detail-page .inner .top-banner-image {
   width: 200px;
@@ -5444,7 +5469,7 @@ ul.list li:before {
 }
 .wrapper main .acquiring-detail-page .inner .how-much-block-table {
   width: 50%;
-  padding: 30px 35px 25px;
+  padding: 30px 50px 25px 35px;
   background: #fff;
   border-radius: 20px;
 }
@@ -5463,6 +5488,7 @@ ul.list li:before {
   border-bottom: 1px solid #e6e8e0;
 }
 .wrapper main .acquiring-detail-page .inner .how-much-block-table-line:last-child {
+  padding-bottom: 0;
   border-bottom: none;
 }
 .wrapper main .acquiring-detail-page .inner .how-much-block-table-line-desc {
