--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ ul.list li:before {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  min-height: 225px;
+  min-height: 320px;
   padding-left: 70px;
   background: #f4f4f4;
   border-radius: 20px;
@@ -751,7 +751,7 @@ ul.list li:before {
   width: calc((100% - 50px)/3);
   height: 150px;
   margin-top: 25px;
-  padding: 0 25px;
+  padding: 0 20px 0 30px;
   border: 1px solid #e6e8e0;
   border-radius: 20px;
 }
@@ -2861,6 +2861,9 @@ ul.list li:before {
 .wrapper main .main-page .inner .steps-block {
   margin-top: 0;
 }
+.wrapper main .actions-page .inner .top-banner {
+  min-height: 225px;
+}
 .wrapper main .actions-page .inner .top-banner:before {
   content: '';
   position: absolute;
@@ -3020,6 +3023,9 @@ ul.list li:before {
   border-right: 1px solid #f65e64;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+.wrapper main .bonuses-page .inner .top-banner {
+  min-height: 225px;
 }
 .wrapper main .bonuses-page .inner .top-banner:before {
   content: 'Бонусы';
@@ -3262,6 +3268,9 @@ ul.list li:before {
 }
 .wrapper main .bonuses-page .inner .bonuses-more:hover span:before {
   border-color: #fff;
+}
+.wrapper main .bonuses-page-detail .inner .top-banner {
+  min-height: 225px;
 }
 .wrapper main .bonuses-page-detail .inner .top-banner:before {
   content: 'Бонусы';
@@ -3588,6 +3597,9 @@ ul.list li:before {
 .wrapper main .bonuses-page-detail .inner .bonuses-more:hover span:before {
   border-color: #fff;
 }
+.wrapper main .journal-page .inner .top-banner {
+  min-height: 225px;
+}
 .wrapper main .journal-page .inner .top-banner:before {
   content: '';
   position: absolute;
@@ -3800,6 +3812,9 @@ ul.list li:before {
 .wrapper main .journal-page .inner .articles-more a {
   display: block;
   height: 100%;
+}
+.wrapper main .about-page .inner .top-banner {
+  min-height: 225px;
 }
 .wrapper main .about-page .inner .top-banner:before {
   right: 31%;
@@ -4337,6 +4352,9 @@ ul.list li:before {
   color: #fff;
   border: none;
 }
+.wrapper main .departments-page .inner .top-banner {
+  min-height: 225px;
+}
 .wrapper main .departments-page .inner .top-banner:before {
   right: 37%;
   top: unset;
@@ -4349,6 +4367,9 @@ ul.list li:before {
   top: -22px;
   width: 55px;
   height: 55px;
+}
+.wrapper main .policy-page .inner .top-banner {
+  min-height: 225px;
 }
 .wrapper main .policy-page .inner .top-banner:before {
   right: 37%;
@@ -4377,6 +4398,9 @@ ul.list li:before {
 }
 .wrapper main .policy-page .inner .text span:first-child {
   margin-top: 0;
+}
+.wrapper main .safety-page .inner .top-banner {
+  min-height: 225px;
 }
 .wrapper main .safety-page .inner .top-banner:before {
   right: 37%;
@@ -4433,6 +4457,9 @@ ul.list li:before {
 }
 .wrapper main .safety-page .inner .recommendation-block-list-item span {
   color: #ccc;
+}
+.wrapper main .help-page .inner .top-banner {
+  min-height: 225px;
 }
 .wrapper main .help-page .inner .info {
   display: -webkit-box;
@@ -5416,16 +5443,13 @@ ul.list li:before {
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-.wrapper main .acquiring-detail-page .inner .top-banner:before {
-  content: none;
-}
-.wrapper main .acquiring-detail-page .inner .top-banner:after {
+.wrapper main .acquiring-detail-page.trade-acquiring .inner .top-banner:after {
   right: 27%;
   top: 30px;
   width: 57px;
   height: 57px;
 }
-.wrapper main .acquiring-detail-page .inner .top-banner-wave {
+.wrapper main .acquiring-detail-page.trade-acquiring .inner .top-banner-wave {
   position: absolute;
   right: 30%;
   top: 50px;
@@ -5433,7 +5457,7 @@ ul.list li:before {
   height: 13px;
   overflow: hidden;
 }
-.wrapper main .acquiring-detail-page .inner .top-banner-wave:before {
+.wrapper main .acquiring-detail-page.trade-acquiring .inner .top-banner-wave:before {
   content: '';
   position: absolute;
   left: 0;
@@ -5444,8 +5468,43 @@ ul.list li:before {
   -webkit-animation: wave 5s linear infinite;
           animation: wave 5s linear infinite;
 }
-.wrapper main .acquiring-detail-page .inner .top-banner-image {
+.wrapper main .acquiring-detail-page.trade-acquiring .inner .top-banner-image {
   width: 200px;
+}
+.wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner:after {
+  right: 35%;
+  top: unset;
+  bottom: 40px;
+  width: 57px;
+  height: 57px;
+}
+.wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner-wave {
+  position: absolute;
+  right: 38%;
+  top: unset;
+  bottom: 55px;
+  width: 108px;
+  height: 26px;
+  overflow: hidden;
+}
+.wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner-wave:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 200%;
+  height: 100%;
+  background: url(../img/icon_wave.svg);
+  -webkit-animation: wave 5s linear infinite;
+          animation: wave 5s linear infinite;
+}
+.wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner-image {
+  width: 330px;
+}
+.wrapper main .acquiring-detail-page .inner .top-banner:before {
+  content: none;
+}
+.wrapper main .acquiring-detail-page .inner .top-banner-image {
   -ms-flex-item-align: center;
       align-self: center;
 }
@@ -5564,6 +5623,9 @@ ul.list li:before {
           transform: translateY(-50%);
   background: url(../img/icon_list.svg) no-repeat;
   background-size: contain;
+}
+.wrapper main .requisite-page .inner .top-banner {
+  min-height: 225px;
 }
 .wrapper main .requisite-page .inner .top-banner:before {
   top: unset;
@@ -5930,6 +5992,9 @@ ul.list li:before {
   margin-top: 20px;
   font: 300 18px/1.5 'Gilroy', sans-serif;
 }
+.wrapper main .remote-service-page .inner .top-banner {
+  min-height: 225px;
+}
 .wrapper main .remote-service-page .inner .top-banner:before {
   content: none;
 }
@@ -6058,6 +6123,9 @@ ul.list li:before {
   background: #f65e64;
   border-radius: 50%;
 }
+.wrapper main .tariffs-page .inner .top-banner {
+  min-height: 225px;
+}
 .wrapper main .tariffs-page .inner .top-banner:before,
 .wrapper main .tariffs-page .inner .top-banner:after {
   content: none;
@@ -6082,9 +6150,6 @@ ul.list li:before {
 }
 .wrapper main .tariffs-page .inner .steps-block-item-desc {
   margin-top: 5px;
-}
-.wrapper main .start-business-page .inner .top-banner {
-  min-height: 320px;
 }
 .wrapper main .start-business-page .inner .top-banner:before {
   content: none;
@@ -6356,9 +6421,6 @@ ul.list li:before {
 .wrapper main .start-business-page .inner .docs-download-button a:hover:before {
   opacity: 1;
 }
-.wrapper main .internet-business-page .inner .top-banner {
-  min-height: 320px;
-}
 .wrapper main .internet-business-page .inner .top-banner-image {
   width: 325px;
   margin-top: -30px;
@@ -6366,9 +6428,6 @@ ul.list li:before {
 .wrapper main .internet-business-page .inner .advantage-title,
 .wrapper main .internet-business-page .inner .steps-title {
   font: 500 30px/1.3 'Gilroy', sans-serif;
-}
-.wrapper main .small-business-page .inner .top-banner {
-  min-height: 320px;
 }
 .wrapper main .small-business-page .inner .top-banner:before {
   content: none;
@@ -6424,9 +6483,6 @@ ul.list li:before {
 .wrapper main .small-business-page .inner .steps-title {
   font: 500 30px/1.3 'Gilroy', sans-serif;
 }
-.wrapper main .freelancer-page .inner .top-banner {
-  min-height: 320px;
-}
 .wrapper main .freelancer-page .inner .top-banner:before {
   content: none;
 }
@@ -6478,9 +6534,6 @@ ul.list li:before {
 .wrapper main .freelancer-page .inner .advantage-title,
 .wrapper main .freelancer-page .inner .steps-title {
   font: 500 30px/1.3 'Gilroy', sans-serif;
-}
-.wrapper main .all-tools-page .inner .top-banner {
-  min-height: 320px;
 }
 .wrapper main .all-tools-page .inner .top-banner:before {
   content: none;
