--- a/css/style.less
+++ b/css/style.less
@@ -3567,7 +3567,7 @@ ul.list {
             }
           }
         }
-        .features {
+        .reliable-hands {
           margin-top: 100px;
           &-title {
             font: 700 36px/1.3 @font;
@@ -3602,30 +3602,6 @@ ul.list {
               &-desc {
                 margin-top: 35px;
                 font: 300 18px/1.5 @font;
-              }
-              &-list {
-                margin-top: 15px;
-                margin-bottom: 0;
-                li {
-                  position: relative;
-                  margin-top: 10px;
-                  padding-left: 20px;
-                  font: 300 18px/1.5 @font;
-                  &:before {
-                    content: '';
-                    position: absolute;
-                    left: 0;
-                    top: 50%;
-                    width: 7px;
-                    height: 7px;
-                    transform: translateY(-50%);
-                    background: @pink;
-                    border-radius: 50%;
-                  }
-                  &:first-child {
-                    margin-top: 0;
-                  }
-                }
               }
               &.item1 {
                 &:before {
