--- a/css/style.less
+++ b/css/style.less
@@ -4010,43 +4010,6 @@ ul.list {
         }
       }
     }
-    .policy-page {
-      .inner {
-        .top-banner {
-          min-height: 225px;
-          &:before {
-            right: 37%;
-            top: unset;
-            bottom: -15px;
-            width: 30px;
-            height: 30px;
-          }
-          &:after {
-            right: 9%;
-            top: -25px;
-            width: 55px;
-            height: 55px;
-          }
-          &-content {
-            &-text {
-              max-width: 750px;
-            }
-          }
-        }
-        .text {
-          max-width: 900px;
-          margin-top: 75px;
-          span {
-            display: block;
-            margin-top: 35px;
-            font: 300 22px/1.5 @font;
-            &:first-child {
-              margin-top: 0;
-            }
-          }
-        }
-      }
-    }
     .safety-page {
       .inner {
         .top-banner {
@@ -4105,6 +4068,14 @@ ul.list {
                 }
               }
             }
+          }
+        }
+        .request {
+          &-desc {
+            max-width: 460px;
+            margin-left: auto;
+            margin-right: auto;
+            font: 300 18px/1.5 @font;
           }
         }
       }
